# robogoat

./: .clang-tidy  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  EVIDENCE_AND_REPRODUCIBILITY.md  FIXES_COMPLETE.md  GPU_CI_STATUS.md  KNOWN_LIMITATIONS.md  Makefile  PRODUCTION_STATUS.md  README.md  ROADMAP.md  SECURITY.md  VALIDATION_COMPLETE.md  execute_build.sh  requirements.txt  run_tests_robocache.sh  test_fixes_locally.py
robocache/: .gitignore  .pre-commit-config.yaml  ACKNOWLEDGMENTS.md  ARCHITECTURE.md  AUDIT_H100_VALIDATION.md  AUDIT_RESPONSE_COMPLETE.md  AUDIT_RESPONSE_PLAN.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEFINITION_OF_DONE_COMPLETE.md  DELIVERY.md  DELIVERY_VALIDATION.md  Dockerfile.h100  Dockerfile.l4  EXECUTIVE_SUMMARY.md  EXPERT_VALIDATION_STATUS.md  FINAL_ASSESSMENT.md  FINAL_VALIDATION_SUMMARY.md  H100_PYTHON_PROOF.md  H100_VALIDATION_COMPLETE.md  H100_VALIDATION_EVIDENCE.md  HONEST_STATUS.md  KNOWN_LIMITATIONS.md  LICENSE  MANIFEST.in  Makefile  PERFORMANCE_LIMIT_ANALYSIS.md  PRIORITY_FIXES.md  PRODUCTION_READY_v1.0.md  PRODUCTION_SUMMARY.md  PRODUCTION_UPGRADE_V0.2.md  PRODUCTION_VALIDATION_SUMMARY.md  PROJECT_STATUS.md  PR_DESCRIPTION.md  QUICKSTART_OPTIMIZATION.md  README.md  REAL_WORLD_VALIDATION.md  RELEASE_CHECKLIST.md  (+21 more)
robocache/.archive/development_history/: A100_VALIDATION.md  ABLATION_STUDIES_COMPLETE.md  AUDIT_IMMEDIATE_RESPONSE.md  BENCHMARK_RESULTS_H100.md  BREV_AUTH_SETUP.md  EXPERT_DAY1_FINAL_SUMMARY.md  EXPERT_FINAL_SUMMARY.md  EXPERT_PROGRESS_DAY1.md  EXPERT_TODO_STATUS.md  H100_ALL_KERNELS_VALIDATED.md  H100_DEPLOYMENT_REQUIREMENTS.md  H100_FINAL_VALIDATION_REPORT.md  H100_NCU_BASELINE_VALIDATED.md  MANUAL_H100_VALIDATION.md  MEMORY_STRATEGY_GUIDE.md  NCU_PROFILING_GUIDE.md  OPTIMIZATION_FINAL_REPORT.md  OPTIMIZATION_SUMMARY.md  PACKAGE_READY.md  PHASE2_H100_VALIDATION.md  PHASE2_SUMMARY.md  PRIORITY_FIXES.md  PRODUCTION_STATUS.md  QUICK_START_BENCHMARK.md  SYNC_TO_H100.md  TEST_INSTRUCTIONS.md  TMA_OPTIMIZATION_STATUS.md  TRAJECTORY_OPTIMIZATION_FINAL.md  TRITON_VS_CUDA_EVIDENCE.md  VALIDATION_REPORT.md  WEEK1_COMPLETE.md  WEEK1_DAY1_COMPLETE.md  WEEK1_DAY2_COMPLETE.md  build_instructions.md  h100_optimizations.md  path_to_40_percent.md
robocache/.archive/kernel_experiments/: multimodal_fusion.cu
robocache/.github/: markdown-link-check-config.json  pull_request_template.md
robocache/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
robocache/.github/workflows/: build-wheels.yml  ci.yml  cuda-validation-complete.yml  cuda-validation.yml  nightly.yml  performance-gates.yml  release.yml  security-scan.yml  security.yml
robocache/artifacts/refs/: H100_PROFILING_SUMMARY.md
robocache/bench/: benchmark_harness.py
robocache/bench/results/: BENCHMARK_H100_SUMMARY.md  benchmark_h100_20251106_172811.csv
robocache/benchmarks/: README.md  ablation_bf16_vs_fp32.py  baseline_dataloader.py  benchmark_action_space.cu  benchmark_dataloading.py  benchmark_harness.py  benchmark_multimodal_fusion.cu  benchmark_optimization.cu  benchmark_tma_comparison.py  benchmark_trajectory_resample.cu  benchmark_voxel_occupancy.py  benchmark_voxelization.cu  benchmark_voxelization_full.cu  compare_triton_vs_cuda.py  download_data.py  real_world_datasets.py  robocache_dataloader.py  rtx_real_world_benchmark.py  run_all.sh  run_all_benchmarks.py  smoke.py  test_integration.py  training_loop_h100.py
robocache/benchmarks/baselines/: compare_all.py  pytorch_native.py  triton_prototype.py
robocache/benchmarks/integration/: train_diffusion_policy.py
robocache/benchmarks/multimodal/: benchmark_multimodal_fusion.cu
robocache/benchmarks/results/: h100_validated_20251105.json
robocache/cmake/: ThirdPartyCUTLASS.cmake
robocache/cpp/: CMakeLists.txt
robocache/csrc/: KERNEL_INVENTORY.md
robocache/csrc/cpp/: cutlass_ops.cpp  multimodal_ops.cpp  resample_ops.cpp  voxelize_ops.cpp
robocache/csrc/cuda/: multimodal_kernel.cu  resample_kernel.cu  voxelize_kernel.cu  (+1 more)
robocache/docker/: Dockerfile.runtime
robocache/docs/: BASELINE_COMPARISON_EXPERT.md  BUILD_MATRIX.md  ERROR_HANDLING_GUIDE.md  EXPERT_DAY2_PROGRESS.md  FLASH_ATTENTION_INTEGRATION.md  GEAR_GROOT_INTEGRATION_RESOURCES.md  GROOT_GEAR_DEPLOYMENT.md  H100_BUILD_STATUS.md  KERNEL_COMPARISON.md  MULTI_GPU_GUIDE.md  PRODUCTION_STATUS.md  RELEASING.md  TENSOR_CORE_ASSESSMENT.md  VALIDATION_COMPLETE.md  h100_ncu_analysis.md  multimodal_fusion.md  nvidia_application_narrative.md  performance_benchmarks.md  shared_memory_optimization.md
robocache/examples/: basic_usage.py  distributed_training_pipeline.py  multi_gpu_scaling.py  multimodal_fusion_example.py  ray_distributed_preprocessing.py
robocache/kubernetes/: README.md  preprocessing_job.yaml
robocache/observability/: grafana_dashboard.json
robocache/profiling/: NCU_COMPLETE_ANALYSIS.md  NCU_H100_TRAJECTORY_RESAMPLE.md  NSIGHT_SYSTEMS_H100.md
robocache/python/: __init__.py
robocache/scripts/: build_cuda_extension.sh  build_wheel.sh  build_wheels.sh  ci_build_and_test.sh  compare_baseline.py  generate_profiling_report.py  profile.sh  profile_multimodal.py  profile_ncu.sh  profile_trajectory.py  profile_voxelize.py  reproduce_validation.sh  train_demo.py  validate_audit_fixes.sh  validate_metrics.py  verify_env.sh
robocache/tests/: README.md  __init__.py  conftest.py  pytest.ini  test_all_operations.py  test_backends.py  test_correctness.py  test_cuda_correctness.py  test_determinism.py  test_error_handling.py  test_installation.py  test_integration_package.py  test_memory_strategy.py  test_mixed_precision.py  test_multi_gpu.py  test_multimodal_correctness.py  test_multimodal_fusion.py  test_resample.py  test_simple.py  test_soak.py  test_temporal_fusion.py  test_timestamp_alignment.py  test_trajectory.py  test_trajectory_correctness.py  test_trajectory_resample.py  test_voxel_optimized_correctness.py  test_voxelization.py  test_voxelize_correctness.py
robocache/tools/: profile_expert.sh
robocache/validation/: cpu_reference.hpp
(+218 files in other folders)
