[build-system]
requires = ["setuptools>=61.0", "wheel", "torch>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robocache"
version = "1.0.0"
description = "Production-grade GPU acceleration for robot learning"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Brandon Dent", email = "b@thegoatnote.com"}
]
maintainers = [
    {name = "Brandon Dent", email = "b@thegoatnote.com"}
]
keywords = [
    "gpu", "cuda", "robotics", "machine-learning", "nvidia",
    "robot-learning", "autonomous-driving", "foundation-models"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Programming Language :: CUDA",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
]
bench = [
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/GOATnote-Inc/robogoat"
Documentation = "https://github.com/GOATnote-Inc/robogoat/tree/main/robocache"
Repository = "https://github.com/GOATnote-Inc/robogoat"
Issues = "https://github.com/GOATnote-Inc/robogoat/issues"
Changelog = "https://github.com/GOATnote-Inc/robogoat/releases"

[tool.setuptools]
packages = ["robocache"]

[tool.setuptools.package-data]
robocache = ["*.so", "*.cu", "*.cuh", "*.h"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "perf: performance tests with gates",
    "slow: slow tests (deselect with '-m \"not slow\"')",
    "gpu: requires GPU",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.cibuildwheel]
# Build for Linux only (GPU kernels require Linux)
build = "cp310-* cp311-*"
skip = "pp* *-win* *-macosx*"

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y cuda-toolkit-12-1 || apt-get install -y nvidia-cuda-toolkit",
]
manylinux-x86_64-image = "manylinux2014"
environment = {CUDA_HOME="/usr/local/cuda"}

[[tool.cibuildwheel.overrides]]
select = "*-manylinux_x86_64"
environment = {CUDA_HOME="/usr/local/cuda-12.1", LD_LIBRARY_PATH="/usr/local/cuda-12.1/lib64:$LD_LIBRARY_PATH"}

[[tool.cibuildwheel.overrides]]
select = "*-manylinux_x86_64"
before-build = [
    "pip install torch==2.5.0+cu121 --index-url https://download.pytorch.org/whl/cu121",
]
