[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "torch>=2.0.0",
    "ninja",
]
build-backend = "setuptools.build_meta"

[project]
name = "robocache"
version = "1.0.0"
description = "GPU-Accelerated Data Engine for Robot Foundation Models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "GOATnote Engineering", email = "b@thegoatnote.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Programming Language :: CUDA",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]
benchmark = [
    "matplotlib>=3.5.0",
    "pandas>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/GOATnote-Inc/robogoat"
Repository = "https://github.com/GOATnote-Inc/robogoat"
Documentation = "https://github.com/GOATnote-Inc/robogoat/tree/main/docs"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
robocache = ["*.so", "*.pyd"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
